# void-eid

./: .cz.yaml  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  SECURITY.md  docker-compose.yml
.agent/rules/: docker-guide.md  frontend-design.md  frontend-guide.md  general-guide.md  github-actions-guide.md  rust-guide.md  typescript-guide.md
.agent/workflows/: address-pr-comments.md  security-audit.md
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE  copilot-instructions.md  dependabot.yml
.github/prompts/: address-pr-comments.prompt.md  fix-build.prompt.md  plan-migrate-backend-to-debian-slim.prompt.md  plan-refactorCiPlaywrightMatrix.prompt.md  plan-rider-check.prompt.md
.github/workflows/: ci.yml  codeql.yml  release.yml
deploy/compose/: .env.sample  README.md  docker-compose.yml
deploy/quadlet/: README.md  deploy.sh  stop.sh  void-backend.container  void-frontend.container  void-murmur.container  void-tunnel.container  void.network
docs/: README.md  backend.md  contributing.md  deployment.md  design-system.md  discord-setup.md  frontend.md  release-process.md
docs/security-audits/: 2026-02-14-remediation.md  2026-02-14.md
examples/compose/: .env.sample  docker-compose.yml
scripts/: build-all.sh  test-e2e.sh
src/backend/: Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.release
src/backend/migrations/: 01_init.sql  02_create_tribes_table.sql  03_mumble_tables.sql  03_soft_delete_wallets.sql  04_add_user_tribes_source.sql  04_unique_wallets_address.sql  05_add_network_to_wallets.sql  06_add_identity_hashes.sql
src/backend/scripts/: debug_wallets.py  seed_test_data.py  setup_admin.py
src/backend/src/: admin.rs  audit.rs  auth.rs  db.rs  helpers.rs  lib.rs  main.rs  models.rs  mumble.rs  notes.rs  roster.rs  state.rs  wallet.rs
src/backend/src/middleware/: admin.rs
src/frontend/: Dockerfile  Dockerfile.dev  Dockerfile.release  entrypoint.sh  eslint.config.js  index.html  nginx.conf  nginx.main.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
src/murmur/: Dockerfile  Murmur.ice  authenticator.py  murmur.ini  start.sh
src/rust/: Cargo.toml  Dockerfile
src/rust/migrations/: 01_init.sql  02_add_roster_fields.sql  02_notes_table.sql  03_add_audit_logs.sql
src/rust/scripts/: debug_wallets.py  seed_test_data.py  setup_admin.py
src/rust/src/: audit.rs  auth.rs  helpers.rs  lib.rs  main.rs  models.rs  notes.rs  roster.rs  state.rs  wallet.rs
src/sui/: .env.test  Dockerfile  Dockerfile.dev  nginx.conf  (+3 more)
(+66 files in other folders)
