[package]
name = "void-eid-backend"
version = "0.1.1"
edition = "2021"
default-run = "void-eid-backend"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "chrono",
] }
tower-http = { version = "0.6.8", features = ["cors"] }
tower_governor = "0.6.0"
reqwest = { version = "0.13.1", features = ["json", "form", "multipart"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
rand = "0.9.2"
chrono = { version = "0.4.38", features = ["serde"] }
anyhow = "1.0.86"
base64 = "0.22.1"
urlencoding = "2.1.3"

uuid = { version = "1.19.0", features = ["v4", "serde"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
bcs = "0.1.6"
sui-sdk = { git = "https://github.com/MystenLabs/sui", package = "sui-sdk" }
shared-crypto = { git = "https://github.com/MystenLabs/sui", package = "shared-crypto" }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
bcrypt = "0.18.0"
sha2 = "0.10.8"
hex = "0.4.3"
